test/output/compile_result.txt
src/test_opencv.cpp:1:10: fatal error: opencv2/opencv.hpp: No such file or directory
    1 | #include <opencv2/opencv.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~
compilation terminated.
